UtahLiveDataTest/src/objects/UserNote__c.object
<CustomObject>
    <description>[Business]Store notes related to User</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is it completed?</description>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Notes desciption</description>
        <label>Description</label>
        <length>64768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tittle__c</fullName>
        <description>Tittle of user Note</description>
        <label>Tittle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to note</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>User Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>